# statesman

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: demo_workflow.py  mesh_demo.py  sample_config.yaml
src/statesman/: __init__.py
src/statesman/cli/: main.py
src/statesman/core/: base.py
src/statesman/models/: state.py
src/statesman/utils/: config_utils.py  file_utils.py
tests/: test_statesman.py
